include/oneui/oneui_c_api.h

typedef struct OneUiWindow OneUiWindow;
typedef struct OneUiWidget OneUiWidget;
typedef void (*OneUiVoidCallback)(void* user_data);
typedef void (*OneUiDestroyCallback)(void* user_data);
typedef void (*OneUiUtf8TextCallback)(const char* text, size_t length, void* user_data);
/*
 * Cross-platform string ABI. The caller owns data and it is only read during
 * the function call. Invalid UTF-8 is converted to U+FFFD by OneUI.
 */
typedef struct OneUiUtf8String {
    const char* data;
    size_t length;
} OneUiUtf8String;
/*
 * Structured UTF-8 list data. The caller owns both string buffers and the
 * array; OneUI copies every field before oneui_list_set_items_utf8 returns.
 */
typedef struct OneUiListItemUtf8 {
    OneUiUtf8String title;
    OneUiUtf8String detail;
} OneUiListItemUtf8;
typedef struct OneUiWindowOptionsUtf8 {
    OneUiUtf8String title;
    int width;
    int height;
    int visible;
    int borderless;
    int fullscreen;
    int topmost;
    int resizable;
} OneUiWindowOptionsUtf8;
typedef struct OneUiInsets {
    float top;
    float right;
    float bottom;
    float left;
} OneUiInsets;
typedef enum OneUiStackDirection {
    OneUiStackDirectionColumn = 0,
    OneUiStackDirectionRow = 1
} OneUiStackDirection;
ONEUI_API unsigned int oneui_utf8_abi_version(void);
ONEUI_API OneUiWindow* oneui_window_create_utf8(const OneUiWindowOptionsUtf8* options);
ONEUI_API void oneui_window_destroy(OneUiWindow* window);
ONEUI_API void oneui_window_initialize(OneUiWindow* window);
ONEUI_API void oneui_window_show(OneUiWindow* window);
ONEUI_API void oneui_window_activate(OneUiWindow* window);
ONEUI_API int oneui_window_run(OneUiWindow* window);
ONEUI_API void oneui_window_close(OneUiWindow* window);
ONEUI_API void oneui_window_request_close(OneUiWindow* window);
/*
 * Queues callback on the window UI thread. Returns 1 when accepted. When the
 * callback cannot run because the window is closed, cleanup receives user_data
 * exactly once. The callback owns user_data after a successful return.
 */
ONEUI_API int oneui_window_post_owned(
    OneUiWindow* window,
    OneUiVoidCallback callback,
    void* user_data,
    OneUiDestroyCallback cleanup);
ONEUI_API void oneui_window_set_title_utf8(OneUiWindow* window, OneUiUtf8String title);
ONEUI_API void oneui_window_set_content(OneUiWindow* window, OneUiWidget* widget);
ONEUI_API void oneui_widget_destroy(OneUiWidget* widget);
/* Returns required buffer bytes including the trailing NUL; returns 0 on error. */
ONEUI_API int oneui_clipboard_set_text_utf8(OneUiUtf8String text);
ONEUI_API size_t oneui_clipboard_get_text_utf8(char* buffer, size_t buffer_len);
ONEUI_API OneUiWidget* oneui_stack_create(OneUiStackDirection direction);
ONEUI_API void oneui_stack_add(OneUiWidget* stack, OneUiWidget* child);
ONEUI_API void oneui_stack_set_gap(OneUiWidget* stack, float gap);
ONEUI_API void oneui_stack_set_padding(OneUiWidget* stack, OneUiInsets insets);
ONEUI_API OneUiWidget* oneui_scroll_view_create(void);
ONEUI_API void oneui_scroll_view_set_content(OneUiWidget* view, OneUiWidget* child);
ONEUI_API void oneui_scroll_view_set_content_height(OneUiWidget* view, float height);
ONEUI_API void oneui_scroll_view_set_wheel_step(OneUiWidget* view, float step);
ONEUI_API void oneui_scroll_view_scroll_to_bottom(OneUiWidget* view);
ONEUI_API OneUiWidget* oneui_label_create_utf8(OneUiUtf8String text);
ONEUI_API void oneui_label_set_text_utf8(OneUiWidget* label, OneUiUtf8String text);
ONEUI_API void oneui_label_set_font_size(OneUiWidget* label, float font_size);
ONEUI_API OneUiWidget* oneui_list_create(void);
ONEUI_API void oneui_list_set_items_utf8(OneUiWidget* list, const OneUiListItemUtf8* items, size_t count);
ONEUI_API void oneui_list_set_selected_index(OneUiWidget* list, int index);
ONEUI_API int oneui_list_selected_index(OneUiWidget* list);
ONEUI_API OneUiWidget* oneui_text_field_create_utf8(OneUiUtf8String placeholder);
ONEUI_API void oneui_text_field_set_text_utf8(OneUiWidget* text_field, OneUiUtf8String text);
ONEUI_API void oneui_text_field_set_read_only(OneUiWidget* text_field, int read_only);
ONEUI_API void oneui_text_field_set_on_changed_utf8(OneUiWidget* text_field, OneUiUtf8TextCallback callback, void* user_data);
ONEUI_API OneUiWidget* oneui_search_box_create_utf8(OneUiUtf8String placeholder);
ONEUI_API OneUiWidget* oneui_button_create_utf8(OneUiUtf8String text);
ONEUI_API void oneui_button_set_text_utf8(OneUiWidget* button, OneUiUtf8String text);